create the banner of gift card page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -323,3 +323,18 @@ h4 {
 } 
  
 
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.animate-float {
+  animation: float 5s ease-in-out infinite;
+}
