--- a/src/components/Gift-Card-Feature/LoginFrom.css
+++ b/src/components/Gift-Card-Feature/LoginFrom.css
@@ -28,7 +28,7 @@
     padding: 2rem;
     border-radius: 0.5rem;
     border: 4px solid #fff;
-    background: rgba(0, 255, 240, 0.52);
+    background: rgba(208, 233, 232, 0.52);
     box-shadow: 0px 0px 64px 0px #82e1ff inset, 0px 0px 16px #a8fffaa6;
     backdrop-filter: blur(3.5px);
     animation: float 2s ease-in-out infinite;
@@ -36,7 +36,7 @@
   
   #login-lable {
     text-align: center;
-    color: white;
+    color: rgba(193, 34, 225, 0.52);
     font-size: 2rem;
     font-weight: 600;
     letter-spacing: 8px;
@@ -46,13 +46,13 @@
   .form-content {
     height: 3em;
     padding: 1px 8px;
-    color: white;
+    color: black;
     text-decoration: none;
     letter-spacing: 1px;
     font-weight: bold;
     border-radius: 6px;
     border: 2px solid #fff;
-    background: rgba(139, 255, 247, 0.486);
+    background: rgba(139, 189, 255, 0.59);
     box-shadow: 0px 0px 1px 3px #9ee5e3 inset, 0px 4px 4px 0px #181a6040;
     text-shadow: 0px 1px 4px rgb(243, 243, 243);
   }
@@ -83,7 +83,7 @@
     font-size: 1.5em;
     letter-spacing: 0.3rem;
     border: 2px solid white;
-    background: linear-gradient(144deg, #9c11ffce, #2000eeb6 50%, #15efffbb);
+    background: linear-gradient(144deg, #aa50ebce, #4b36d7b6 50%, #15efffbb);
   }
   
   .form button:hover {
