--- a/src/components/organizers/Form.css
+++ b/src/components/organizers/Form.css
@@ -1,4 +1,4 @@
-
+/* 
 
 .all{
     display: flex;
@@ -118,4 +118,182 @@ button:hover {
   text-align: center;
   margin-top: 30px;
   color: #fff;
+} */
+
+
+.all{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: #1c1c1c;
+}
+
+.box{
+  position: relative;
+
+  border-radius: 50px 5px;
+  overflow: hidden;
+  
+}
+.box::before{
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(60deg, transparent, #45f3ff, #45f3ff);
+  transform-origin: bottom right;
+  animation: animate 6s linear infinite;
+}
+.box::after{
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(60deg, transparent, #d9138a, #d9138a);
+  transform-origin: bottom right;
+  animation: animate 6s linear infinite;
+  animation-delay: -3s;
+}
+@keyframes animate{
+  0%
+  {
+    transform: rotate(0);
+  }
+  100%
+  {
+    transform: rotate(360deg);
+  }
+}
+form{
+  position: absolute;
+  inset: 2px;
+  border-radius: 50px 5px;
+  background: #28292d;
+  z-index: 10;
+  padding: 30px 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.inputBox{
+  position: relative;
+  
+ 
+}
+.inputBox input{
+  position: relative;
+  width: 100%;
+  padding: 20px 10px 10px;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: black;
+  font-size: 1.2em;
+  letter-spacing: 0.05em;
+  z-index: 10;
+}
+input[type="submit"]{
+  font-size: 20px;
+  border: none;
+  outline: none;
+ 
+  padding: 5px;
+  margin-top: 40px;
+  border-radius: 90px;
+    background: linear-gradient(90deg, #45f3ff, #d9138a);
+  font-weight: 600;
+  cursor: pointer;
+  
+}
+input[type="submit"]:active{
+  background: linear-gradient(90deg, #45f3ff, #d9138a);
+  opacity: 0.8;
+}
+.inputBox span{
+  position: absolute;
+  left: 0;
+  padding: 20px 10px 10px;
+  font-size: 1em;
+  color: #8f8f8f;
+  pointer-events: none;
+  letter-spacing: 0.05em;
+  transition: 0.5s;
+}
+.inputBox input:valid ~ span,
+.inputBox input:focus ~ span{
+  color: #45f3ff;
+  transform: translateX(-10px) translateY(-30px);
+  font-size: 0.75em;
+}
+.inputBox i{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #45f3ff;
+  border-radius: 4px;
+  transition: 0.5s;
+  pointer-events: none;
+  z-index: 9;
+}
+.inputBox input:valid ~ i,
+.inputBox input:focus ~ i{
+  height: 44px;
+}
+.links{
+  display: flex;
+  justify-content: space-between;
+}
+.links a{
+  margin: 25px;
+  font-size: 1em;
+  color: #8f8f8f;
+  text-decoration: none;
+}
+.links a:hover,
+.links a:nth-child(2){
+  color: #45f3ff;
+}
+.links a:nth-child(2):hover{
+  text-decoration: underline 2px;
+  text-underline-offset: 5px;
+}
+
+.btn{
+  position: relative;
+  display: inline-block;
+  padding: 10px 30px;
+  font-size: 1em;
+  background: transparent;
+  border: 2px solid var(--clr);
+  font-weight: 500;
+  border-radius: 40px;
+  cursor: pointer;
+  color: var(--clr);
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  transition: 1s;
+  overflow: hidden;
+}
+.btn:hover{
+  background: var(--clr);
+  box-shadow: 0 0 25px var(--clr),
+  0 0 100px var(--clr),
+  0 0 150px var(--clr);
+}
+.btn span{
+  position: relative;
+  display: inline-block;
+  transition: transform 0.5s;
+  text-shadow: 0 35px #fff;
+  transform: translateY(0px);
+}
+.btn:hover span.hover{
+  transform: translateY(-35px);
 }
