--- a/src/components/organizers/Form.css
+++ b/src/components/organizers/Form.css
@@ -126,7 +126,6 @@ button:hover {
   align-items: center;
   justify-content: center;
 
-  background: #1c1c1c;
 }
 
 .box{
@@ -182,38 +181,23 @@ form{
 
 .inputBox{
   position: relative;
-  
+
  
 }
 .inputBox input{
+
   position: relative;
   width: 100%;
+ 
   padding: 20px 10px 10px;
   background: transparent;
   border: none;
   outline: none;
   color: black;
-  font-size: 1.2em;
   letter-spacing: 0.05em;
   z-index: 10;
 }
-input[type="submit"]{
-  font-size: 20px;
-  border: none;
-  outline: none;
- 
-  padding: 5px;
-  margin-top: 40px;
-  border-radius: 90px;
-    background: linear-gradient(90deg, #45f3ff, #d9138a);
-  font-weight: 600;
-  cursor: pointer;
-  
-}
-input[type="submit"]:active{
-  background: linear-gradient(90deg, #45f3ff, #d9138a);
-  opacity: 0.8;
-}
+
 .inputBox span{
   position: absolute;
   left: 0;
@@ -235,7 +219,7 @@ input[type="submit"]:active{
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 2px;
+  height: 3px;
   background: #45f3ff;
   border-radius: 4px;
   transition: 0.5s;
@@ -246,40 +230,23 @@ input[type="submit"]:active{
 .inputBox input:focus ~ i{
   height: 44px;
 }
-.links{
-  display: flex;
-  justify-content: space-between;
-}
-.links a{
-  margin: 25px;
-  font-size: 1em;
-  color: #8f8f8f;
-  text-decoration: none;
-}
-.links a:hover,
-.links a:nth-child(2){
-  color: #45f3ff;
-}
-.links a:nth-child(2):hover{
-  text-decoration: underline 2px;
-  text-underline-offset: 5px;
-}
+
 
 .btn{
   position: relative;
   display: inline-block;
-  padding: 10px 30px;
-  font-size: 1em;
+
   background: transparent;
   border: 2px solid var(--clr);
   font-weight: 500;
   border-radius: 40px;
-  cursor: pointer;
-  color: var(--clr);
-  letter-spacing: 0.1em;
+ 
+color :aqua;
+  letter-spacing: 0.3em;
   text-transform: uppercase;
   transition: 1s;
   overflow: hidden;
+  cursor: pointer;
 }
 .btn:hover{
   background: var(--clr);
@@ -297,3 +264,20 @@ input[type="submit"]:active{
 .btn:hover span.hover{
   transform: translateY(-35px);
 }
+/* input[type="submit"]{
+  font-size: 20px;
+  border: none;
+  outline: none;
+ 
+  padding: 5px;
+  margin-top: 40px;
+  border-radius: 90px;
+    background: linear-gradient(90deg, #45f3ff, #d9138a);
+  font-weight: 600;
+  cursor: pointer;
+  
+}
+input[type="submit"]:active{
+  background: linear-gradient(90deg, #45f3ff, #d9138a);
+  opacity: 0.8;
+} */
