--- a/src/components/home/banner/Slider.css
+++ b/src/components/home/banner/Slider.css
@@ -1,6 +1,6 @@
 .btnRotate {
   text-decoration: none;
-  border: 2px solid rgb(0, 225, 255);
+  border: 1px solid rgb(0, 225, 255);
   color: transparent;
 
   font-family: sans-serif;
@@ -16,8 +16,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: yellow;
-  background: rgb(34, 34, 34);
+  color: rgb(60, 0, 70);
+  background: rgb(16, 160, 185);
   top: 0;
   left: 100%;
   font-family: sans-serif;
@@ -41,8 +41,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgb(0, 238, 255);
-  background: rgb(34, 34, 34);
+  color: white;
+  background: rgb(16, 160, 185);
   top: 0;
   left: 0;
   font-family: sans-serif;
