Some changed in The Home Page

--- a/src/components/home/banner/Slider.css
+++ b/src/components/home/banner/Slider.css
@@ -2,13 +2,15 @@
   text-decoration: none;
   border: 1px solid rgb(0, 225, 255);
   color: transparent;
-
   font-family: sans-serif;
-  
   transition: all 0.5s;
   position: relative;
-
   display: inline-block;
+  background: transparent;
+  cursor: pointer;
+  padding: 5px 10px;
+  overflow: hidden;
+    border-radius: 20px; 
 }
 
 .btnRotate:before {
