--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,25 +83,25 @@ p {
 
 /* Responsive Containers */
 .container {
-  max-width: 1200px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 0 15px;
   width: 100%;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1280px) {
   .container {
-    max-width: 1000px;
+    max-width: 1100px;
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
   .container {
-    max-width: 768px;
+    max-width: 800px;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .container {
     max-width: 100%;
     padding: 0 10px;
@@ -191,7 +191,7 @@ p {
   display: inline-block;
   padding: 0.5rem 1.5rem;
   /* px-6 py-2 equivalent */
-  background-color: var(--color-primary);
+  background-color: #1b85db;
   color: var(--color-light);
   border-radius: 12px;
   text-align: center;
@@ -200,7 +200,7 @@ p {
 }
 
 .button:hover {
-  background-color: var(--color-hover);
+  background-color: var(--color-primary);
   /* Color change on hover */
   transform: scale(0.9);
   /* Scale down on hover */
