--- a/src/components/Gift-Card-Feature/Banner.css
+++ b/src/components/Gift-Card-Feature/Banner.css
@@ -2,6 +2,11 @@
     clip-path: polygon(0 0, 70% 0, 100% 100%, 0% 100%);
     margin: 0;
     padding: 0;
+    background-image: url('https://i.ibb.co.com/b6hnG5k/pexels-george-dolgikh-551816-1303086.jpg'); 
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat ;
+ 
 }
 
 .clipPathSection2 {
