--- a/src/components/Gift-Card-Feature/LoginFrom.css
+++ b/src/components/Gift-Card-Feature/LoginFrom.css
@@ -9,7 +9,7 @@
   }
   
   #Container {
-    min-width:600px;
+    max-width:600px;
     display: flex;
     flex-direction: column;
     align-items: center;
